--- a/themes/default/css/theme.css
+++ b/themes/default/css/theme.css
@@ -1,18 +1,30 @@
 body
 {
-	background:image(url:"");
+	background-image:url(../images/background.jpg);
+	font-family:MuseoSans, Arial, Helvetica, Sans-seif;
+	font-size:12px;
+	color:#434749;
+	background-repeat:no-repeat;
+	text-shadow:1px 1px 0px #000;
 }
 
 #container
 {
-	width:900px;
+	width:1000px;
 	margin:0 auto;
 	overflow:auto;
 }
 
 #header
 {
-	height:150px;
+	height:100px;
+	background-image:url(../images/logo.png);
+	background-repeat:no-repeat;
+}
+
+#header:hover
+{
+	opacity:0.8;
 }
 
 #nav
@@ -44,7 +56,7 @@ body
 #main_left
 {
 	float:left;
-	width:600px;
+	width:700px;
 	min-height:400px;
 	display:block;
 	background-color:brown;
